Add Calendly link for meetings.

--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -1,4 +1,5 @@
-<p class="homepage-header">This is the website of <strong>Nishant Sinha</strong>, denizen of the internet. Here I share my original writing, recommendations from the internet, books, travel and stories, and other quips.</p>
+<p class="homepage-header">This is the website of <strong>Nishant Sinha</strong>, denizen of the internet. Here I share my original writing, recommendations from the internet, books, travel and stories, and other quips.</br>I'm always open to meeting new people. Schedule time to talk with me on <a href="https://calendly.com/nishnha/hangout">my Calendly!</a></p>
+
 
 {% assign docs_by_category = site.documents | group_by: "category" %}
 {% for category in docs_by_category %}
