Move JS files to own directory.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/css/main.css" rel="stylesheet">
     <link rel="shortcut icon" type="image/svg+xml" href="/favicon.svg" />
-    <script src="/res/js/popup.js"></script>
-    <script src="/res/js/sidenote.js"></script>
-    <script src="/res/js/footnote.js"></script>
+    <script src="/js/popup.js"></script>
+    <script src="/js/sidenote.js"></script>
+    <script src="/js/footnote.js"></script>
 </head>
 
 <body>
