--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -23,8 +23,10 @@ code {
     padding: .15em .5em;
     border-radius: 2px;
     font-size: 0.98rem;
-    background-color: #f7f7f7;
     color: $header-color;
+    &.language-plaintext {
+        background-color: #f7f7f7;
+    }
 }
 
 @media only screen and (max-width: $max-page-width + $navbar-width) {
