Moved london-internship posts to experiences and moved its media to images.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ permalink: /articles/:title
     	{% if page.date %} <p class="date">{{ page.date | date: "%B %-d, %Y" }}</p> {% endif %}
     	{% if page.cover %}
 		<figure>
-			<img class="cover" src="../{{ page.cover }}" />
+			<img class="cover" src="{{ page.cover }}" />
 		{% if page.caption %}
 			<figcaption class="caption">{{ page.caption }}</figcaption>
 		{% endif %}
